Add finished todo list

--- a/Week 2/Day 1/ToDo/lib/public/tasks.yml
+++ b/Week 2/Day 1/ToDo/lib/public/tasks.yml
@@ -1,20 +1,20 @@
 ---
 Zoe:
 - !ruby/object:Task
-  content: Buy the milk
-  id: 1
-  complete: false
-  created_at: 2016-10-26 18:24:53.331710107 +02:00
-  updated_at: 
-- !ruby/object:Task
   content: Wash the car
   id: 2
   complete: false
-  created_at: 2016-10-26 18:24:53.331717020 +02:00
+  created_at: 2016-10-27 17:28:13.739480847 +02:00
   updated_at: 
 - !ruby/object:Task
   content: Drink coffee
   id: 3
   complete: false
-  created_at: 2016-10-26 18:24:53.331721170 +02:00
+  created_at: 2016-10-27 17:28:13.739485072 +02:00
+  updated_at: 
+- !ruby/object:Task
+  content: Buy milk
+  id: 4
+  complete: false
+  created_at: 2016-10-27 17:42:29.471302191 +02:00
   updated_at: 
